Solved the overflow issue

--- a/src/components/BinaryTree/BinaryTree.module.css
+++ b/src/components/BinaryTree/BinaryTree.module.css
@@ -1,3 +1,7 @@
+.BinaryTree{
+  width: fit-content;
+}
+
 .node {
   position: relative;
 
